src/objects/VPM_listOfRegionalandGlobalField__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>VPM - Used to store all fields bifurcated on basis of Regional/Global fields</description>
    <fields>
        <fullName>VPM_ApiName__c</fullName>
        <description>VPM - This field is used to save API name</description>
        <label>ApiName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ECCRegion__c</fullName>
        <description>VPM - This field is used to save regions for all global/regional fields</description>
        <label>ECCRegion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_JSONFieldName__c</fullName>
        <description>VPM - This field store field names of ll regional/global fields</description>
        <label>JSONFieldName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_fieldDatatype__c</fullName>
        <description>VPM - This field is used to store data types for all Global/regional fields</description>
        <label>fieldDatatype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_fieldType__c</fullName>
        <description>VPM - This field displays whether value selected is Global value or regional value</description>
        <label>fieldType</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_parentElement__c</fullName>
        <description>VPM - This field stores all Parent Object names for all global/regional fields</description>
        <label>parentElement</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>VPM_listOfRegionalandGlobalField</label>
</CustomObject>